# MirrorElf-R

./: .gitignore  docker-compose.yml  install.sh  update.sh
app/: Cargo.toml  Dockerfile  docker-compose.yml
app/_/: index.html  tag.html
app/_/admin/: index.html  login.html
app/_/admin/amis/locale/: de-DE.js
app/_/admin/amis/thirds/hls.js/: hls.js
app/_/admin/amis/thirds/mpegts.js/: mpegts.js
app/_/admin/pages/: cache copy.js  cache.js  config.js  config_bak.js  doc.js  firewall.js  main.js  minio.js  site.json  spider.js  target copy 2.js  target copy.js  target.js  tool.js  website.js
app/_/static/js/: ad.js
app/config/: config copy 2.yml  config copy.yml  config.yml
app/doc/: 404_links copy.txt  404_links.txt  ad.txt  bind_domain.txt  emoji.txt  keyword.txt  push_link.txt  website.txt  大小写字母.txt
app/doc/keywords/: keyword.txt
app/src/: main.rs  middleware.rs  my_const.rs
app/src/functions/: ai.rs  cerebras.rs  func.rs  html_to_yaml.rs  minio_bak.rs  mod.rs  sql copy 2.rs  sql copy.rs  sql.rs  tag.rs  verify.rs  youdao copy.rs  youdao.rs
app/src/handlers/: ad.rs  api.rs  mod.rs  robots.rs  sitemap.rs  stream.rs  tag.rs  website_main.rs
app/templates/: seo404 copy.html  seo404.html  sitemap.xml
minio/data/.minio.sys/: format.json
minio/data/.minio.sys/tmp/.trash/0da141e1-cadb-4a6a-af82-15c5403b379c/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/185965ec-fea9-4912-ba14-d06f74834056/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/1adc5750-6366-49b7-bf86-02eb93cfef58/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/2c1e0228-7404-4106-889e-56dd4ef916f0/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/2df047a6-0d6e-4c63-a7ec-35c83be3a832/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/40c461cb-2a89-4f92-b3f8-cb6ca205629a/: xl.meta.bkp
minio/data/.minio.sys/tmp/.trash/4aa0fe96-2f7e-47df-9221-d16ab24faa92/: xl.meta.bkp
(+9 files in other folders)
