[package]
name = "Mirror-Elf-Rust"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
axum = { version = "0.7", features = ["macros"] }
moka = { version = "0.12.10", features = ["sync"] }
futures = "0.3"
hyper = { version = "0.14", features = ["full"] }
reqwest = { version = "0.12.15", features = ["stream", "json", "gzip", "rustls-tls"] } # 启用 rustls-tls
tokio = { version = "1", features = ["full"] }
tokio-stream = "^0.1"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "compression-gzip", "timeout"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
http = "0.2"
headers = "0.3"
notify = "7.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "time", "chrono"] }
config = "0.15"
async-channel = "2.3"
tldextract-rs = { git = "https://github.com/emo-cat/tldextract-rs" }
url = "2.5"
minio-rsc = "0.2.3"
tokio-util = "0.7"
async-stream = "0.3.6"
toml = "0.8"
encoding_rs = "0.8"
regex = "1.11"
lazy_static = "1.5"
once_cell = "1.21.1"
rand = "0.9.0-beta.1"
rand_user_agent = "0.2.1"
lol_html = "2.4.0"
rayon = "1.10"
urlencoding = "2.1.3"
md5 = "0.7"
scraper = "0.22.0"
pinyin = "0.10.0"
uuid = { version = "1.17.0", features = ["v4"] }
aes = "0.7"
block-modes = "0.8"
linecache = "0.1.5"
percent-encoding = "2.3.1"
cached = { version = "0.55.1", features = ["async"] }
jsonwebtoken = "9.3.1"
ring = "0.17.14"
chrono = "0.4.40"
base64 = "0.22.1"
futures-util = "0.3"
hex = "0.4"
indexmap = "2.9.0"
ip2location-ip2location = "0.4.0"
html-escape = "0.2.13"
fake = { version = "4.3.0", features = ["derive"] }
askama = "0.14.0"
jwalk = "0.8.1"
dashmap = "7.0.0-rc2"